fix profile section on mobile

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -22,8 +22,7 @@
 }
 
 .card__image {
-  width: 282px;
-  height: ;
+  width: 100%;
 }
 
 .card__caption {
