--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,5 @@
 .page {
   width: 1280px;
-  height: 1217px;
   margin: 0 auto;
   font-family: Inter, Arial, sans-serif;
   background-color: #000;
