--- a/pages/index.css
+++ b/pages/index.css
@@ -8,32 +8,61 @@
 @import url(../fonts/fonts.css);
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
-}
+  /* mobile */
 
-@media screen and (min-width: 768px) and (max-width: 1280px) {
   .page {
     display: flex;
     flex-direction: column;
-    height: ;
+  }
+
+  .profile__content {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas:
+    "image" 
+    ". ." 
+    "title  edit" 
+    "subtitle" 
+    "." 
+    "add" ;
+  }
+
+  .card__list {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+
+  .
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  /* tablet */
+
+  .page {
+    display: flex;
+    flex-direction: column;
   }
 
   .cards {
-    margin: 0 auto;
     text-align: center;
   }
 
   .card__list {
-    display: grid;
-    grid-column-gap: 17px;
-    grid-row-gap: 20px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
 
   .card__image {
-    width: 431.5px;
+    width: 100%;
+  }
+
+  .footer {
+  }
+
+  .footer__copyright {
   }
 }
 
 @media screen and (min-width: 1280px) {
+  /* desktop */
 }
